--- a/App.config
+++ b/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=C:\Users\vovas\OneDrive\Desktop\Projects\library\library.db" providerName="System.Data.SQLite" />
+    <add name="DefaultConnection" connectionString="Data Source=C:\Users\vovas\Desktop\Projects\library\library.db" providerName="System.Data.SQLite" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
