--- a/packages.config
+++ b/packages.config
@@ -6,4 +6,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.115.5" targetFramework="net472" />
+  <package id="Z.EntityFramework.Extensions" version="6.13.1" targetFramework="net472" />
 </packages>
