--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
